[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/States/Spawn.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Engine/FSM/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Player/States/Move.gd" type="Script" id=4]
[ext_resource path="res://Player/States/Idle.gd" type="Script" id=5]
[ext_resource path="res://Player/States/Run.gd" type="Script" id=6]
[ext_resource path="res://Player/States/Air.gd" type="Script" id=7]
[ext_resource path="res://Player/Skin.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/States/Die.gd" type="Script" id=9]
[ext_resource path="res://Player/States/Dash.gd" type="Script" id=10]
[ext_resource path="res://Player/LedgeWallDetector.tscn" type="PackedScene" id=11]
[ext_resource path="res://Player/States/Ledge.gd" type="Script" id=12]
[ext_resource path="res://Player/FloorDetector.tscn" type="PackedScene" id=13]
[ext_resource path="res://World/light.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.61843, 6.01799 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 10
script = ExtResource( 2 )

[node name="Skin" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.07742 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
max_speed_default = Vector2( 150, 800 )
acceleration_default = Vector2( 3000, 2000 )
jump_impulse = 550.0

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 5 )

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Idle"]
wait_time = 0.1
one_shot = true

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 7 )

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.3
one_shot = true

[node name="Dash" type="Node" parent="StateMachine/Move"]
script = ExtResource( 10 )
dash_speed = 500.0

[node name="DashTimer" type="Timer" parent="StateMachine/Move/Dash"]
wait_time = 0.2
one_shot = true

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Ledge" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="LedgeWallDetector" parent="." instance=ExtResource( 11 )]

[node name="FloorDetector" parent="." instance=ExtResource( 13 )]

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 14 )
color = Color( 1, 1, 1, 0.52549 )
